[gd_scene load_steps=6 format=3 uid="uid://c2mmno84r6spm"]

[ext_resource type="Script" path="res://scenes/card.gd" id="1_y4ll4"]
[ext_resource type="AudioStream" uid="uid://dhjlyv6cfo24x" path="res://assets/flip_sound.mp3" id="2_4tw2j"]

[sub_resource type="Animation" id="Animation_vyews"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardTextureButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_daa6b"]
resource_name = "flip"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardTextureButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.05, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epc1p"]
_data = {
"RESET": SubResource("Animation_vyews"),
"flip": SubResource("Animation_daa6b")
}

[node name="Card" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(70, 110)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_y4ll4")

[node name="CardTextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 55)
ignore_texture_size = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_epc1p")
}

[node name="FlipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4tw2j")

[connection signal="pressed" from="CardTextureButton" to="." method="_on_card_texture_button_pressed"]
